IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
12/20/12: Added Tomodataplots for graphing various data from tilt series
processing (clip stats, blendmont errors, tiltalign mean residuals).

12/19/12: Fixed Tilt when running internal SIRT on CPU with 90 degree angles.

12/19/12: Modified eTomo to run from a directive file.  ETomo will run without
an interface in this situation.(Bug# 1662)

12/18/12: Fixed Edgepatches to use original Z shift when using X/Y shift from
projxf.

12/18/12: A new script, Batchruntomo, can build tomograms automatically with
fiducial, patch tracking, or fiducialless alignment given a text file of
"directives" to set parameters.

12/18/12: Added the SetFEIPixelSize copytomocoms parameter to Setup Tomogram.
(Bug# 1661).

12/17/12: Added right click menu to Plax graphing window to allowing printing
the graph or saving to a PNG file; also, in Genhstplt, left-clicking pops up
the coordinates clicked.  Made Genhstplt draw black on white by default.

12/17/12: Added option -t to Tomosnapshot to take thumbnails of selected files.

12/17/12: Fixed some of the log file monitors, which had the file size defined
as an integer rather then a long, causing an overflow for larger tomograms.
(Bug# 1632)

12/16/12: Made Genhstplt able to plot in color in the graphics window and in
the postscript output; added option to Onegenplot to specify color by R,G,B or
by a standard color name.

12/14/12: Converted newstack comscripts to PIP.(Bug# 1665)

12/14/12: Added a button for viewing the seed model to the Transfer Fiducials
panel.(Bug# 1669)

12/13/12: Made Clipmodel able to clip contours or points by value and retain
fine grained properties in all operations; added option to update object min/max
value; changed it to remove empty contours and added option to keep them.

12/13/12: Added button the Model View Edit-Models dialog to show all models at
the same scale.
