@@ -52,6 +52,7 @@ it should come up at that size in the future.
 <A HREF="modvImage.html#TOP">Image view dialog<A><BR>
 <A HREF="modvIsosurface.html#TOP">Isosurface view dialog<A><BR>
 <A HREF="modelMovie.html#TOP">Model movie & montage control<A><BR>
+<A HREF="movieSequence.html#TOP">Model movie sequence dialog<A><BR>
 <A HREF="modvModelEdit.html#TOP">Model edit<A><BR>
 <A HREF="modvViewEdit.html#TOP">View edit<A><BR>
 <A HREF="depthcue.html#TOP">Depth cueing<A><BR>
