@@ -14,8 +14,10 @@
 <LI><B>Zero Snap File #</B>:&emsp;Reset the counter for snapshot files to 0.
 <LI><B>Set Snap Dir...</B>:&emsp;Set a directory to put snapshots into.  The
 same directory will be used for snapshots from image windows.
-<LI><B>Movie/Montage...</B>:&emsp;Program a sequence of displays and take
+<LI><B>Movie/Montage...</B>:&emsp;Program a series of displays and take
   snapshots of them, or take a high-resolution snapshot of the window.
+<LI><B>Movie Sequence...</B>:&emsp;Store and run a sequence of movies with
+  different display settings.
 <LI><B>Close</B>:&emsp;Quit 3dmodv or close model view window in 3dmod.
 </UL>
 <LI><B>Edit</B> Menu
